--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/index.ts",
   "license": "MIT",
   "devDependencies": {
+    "ts-node": "^8.6.2",
     "typescript": "~3.7.4"
   }
 }
