--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "license": "MIT",
+  "scripts": {
+    "generate": "ts-node scripts/generate.ts"
+  },
   "devDependencies": {
+    "@types/node": "^13.1.8",
     "ts-node": "^8.6.2",
     "typescript": "~3.7.4"
   }
